--- a/src/Sections/contact.css
+++ b/src/Sections/contact.css
@@ -1,7 +1,6 @@
 input[type='text'],
 input[type='email'],
-select,
-textarea {
+select {
     font-size: 17px;
     line-height: 1.23543;
     font-weight: 400;
@@ -13,6 +12,30 @@ textarea {
     vertical-align: top;
     width: 100%;
     height: 3.3em;
+    margin-bottom: 14px;
+    padding-top: 18px;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: #333;
+    text-align: left;
+    border: 1px solid #dedede;
+    border-radius: 4px;
+    background-clip: padding-box;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    font-size: 17px;
+    line-height: 1.23543;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    font-family: SF Pro Text, SF Pro Icons, AOS Icons, Helvetica Neue, Helvetica,
+        Arial, sans-serif;
+    display: inline-block;
+    box-sizing: border-box;
+    vertical-align: top;
+
     margin-bottom: 14px;
     padding-top: 18px;
     padding-left: 16px;
